--- a/TestReport/Collection-List-Automaton-Report.html
+++ b/TestReport/Collection-List-Automaton-Report.html
@@ -46,7 +46,7 @@
 		<ul id='nav-mobile' class='right hide-on-med-and-down nav-right'>
 			<li>
                 <a href='#!'>
-                    <span class='label suite-start-time blue darken-3'>Wednesday, January 22, 2025, 11:27 AM (IST)</span>
+                    <span class='label suite-start-time blue darken-3'>Wednesday, January 22, 2025, 03:10 PM (IST)</span>
 				</a>
 			</li>
 			<li>
@@ -123,14 +123,14 @@
 				<li class='test displayed active  pass' status='pass' bdd='false' test-id='1'>
 					<div class='test-heading'>
 						<span class='test-name'>invalidLogin</span>
-						<span class='test-time'>Wednesday, January 22, 2025, 11:27 AM (IST)</span>
+						<span class='test-time'>Wednesday, January 22, 2025, 03:10 PM (IST)</span>
 						<span class='test-status right pass'>pass</span>
 					</div>
 					<div class='test-content hide'>
 <div class='test-time-info'>
-	<span class='label start-time'>Wednesday, January 22, 2025, 11:27 AM (IST)</span>
-	<span class='label end-time'>Wednesday, January 22, 2025, 11:27 AM (IST)</span>
-	<span class='label time-taken grey lighten-1 white-text'>0h 0m 19s+708ms</span>
+	<span class='label start-time'>Wednesday, January 22, 2025, 03:10 PM (IST)</span>
+	<span class='label end-time'>Wednesday, January 22, 2025, 03:10 PM (IST)</span>
+	<span class='label time-taken grey lighten-1 white-text'>0h 0m 19s+762ms</span>
 </div>
 	<div class='test-steps'>
 		<table class='bordered table-results'>
@@ -144,7 +144,7 @@
 			<tbody>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>11:27:25 AM</td>
+					<td class='timestamp'>3:10:53 PM</td>
 					<td class='step-details'>Test passed</td>
 				</tr>
 			</tbody>
@@ -157,14 +157,14 @@
 				<li class='test displayed active  pass' status='pass' bdd='false' test-id='2'>
 					<div class='test-heading'>
 						<span class='test-name'>checkTheButtonIsEnableOrDisabled</span>
-						<span class='test-time'>Wednesday, January 22, 2025, 11:27 AM (IST)</span>
+						<span class='test-time'>Wednesday, January 22, 2025, 03:10 PM (IST)</span>
 						<span class='test-status right pass'>pass</span>
 					</div>
 					<div class='test-content hide'>
 <div class='test-time-info'>
-	<span class='label start-time'>Wednesday, January 22, 2025, 11:27 AM (IST)</span>
-	<span class='label end-time'>Wednesday, January 22, 2025, 11:27 AM (IST)</span>
-	<span class='label time-taken grey lighten-1 white-text'>0h 0m 5s+70ms</span>
+	<span class='label start-time'>Wednesday, January 22, 2025, 03:10 PM (IST)</span>
+	<span class='label end-time'>Wednesday, January 22, 2025, 03:10 PM (IST)</span>
+	<span class='label time-taken grey lighten-1 white-text'>0h 0m 5s+71ms</span>
 </div>
 	<div class='test-steps'>
 		<table class='bordered table-results'>
@@ -178,7 +178,7 @@
 			<tbody>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>11:27:30 AM</td>
+					<td class='timestamp'>3:10:58 PM</td>
 					<td class='step-details'>Test passed</td>
 				</tr>
 			</tbody>
@@ -191,14 +191,14 @@
 				<li class='test displayed active  pass' status='pass' bdd='false' test-id='3'>
 					<div class='test-heading'>
 						<span class='test-name'>successfullyLogin</span>
-						<span class='test-time'>Wednesday, January 22, 2025, 11:27 AM (IST)</span>
+						<span class='test-time'>Wednesday, January 22, 2025, 03:10 PM (IST)</span>
 						<span class='test-status right pass'>pass</span>
 					</div>
 					<div class='test-content hide'>
 <div class='test-time-info'>
-	<span class='label start-time'>Wednesday, January 22, 2025, 11:27 AM (IST)</span>
-	<span class='label end-time'>Wednesday, January 22, 2025, 11:27 AM (IST)</span>
-	<span class='label time-taken grey lighten-1 white-text'>0h 0m 8s+442ms</span>
+	<span class='label start-time'>Wednesday, January 22, 2025, 03:10 PM (IST)</span>
+	<span class='label end-time'>Wednesday, January 22, 2025, 03:11 PM (IST)</span>
+	<span class='label time-taken grey lighten-1 white-text'>0h 0m 8s+394ms</span>
 </div>
 	<div class='test-steps'>
 		<table class='bordered table-results'>
@@ -212,7 +212,7 @@
 			<tbody>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>11:27:38 AM</td>
+					<td class='timestamp'>3:11:07 PM</td>
 					<td class='step-details'>Test passed</td>
 				</tr>
 			</tbody>
@@ -302,19 +302,19 @@
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Start
-					<div class='panel-lead'>Wednesday, January 22, 2025, 11:27 AM (IST)</div>
+					<div class='panel-lead'>Wednesday, January 22, 2025, 03:10 PM (IST)</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 			 		End
-			 		<div class='panel-lead'>Wednesday, January 22, 2025, 11:27 AM (IST)</div>
+			 		<div class='panel-lead'>Wednesday, January 22, 2025, 03:11 PM (IST)</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Time Taken
-					<div class='panel-lead'>0h 0m 33s+747ms</div>
+					<div class='panel-lead'>0h 0m 33s+840ms</div>
 				</div>
 			</div>
 			<div class='col s4'>
